gdpr tab added, needs changing. text alignment is correct on signup. user info added to the profile.

--- a/profile/static/style.css
+++ b/profile/static/style.css
@@ -247,3 +247,15 @@ input {
 .closed {
   display: none;
 }
+
+#profile {
+  display: flex;
+  flex-direction: row;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  padding: 7.5px;
+  font-size: 15px;
+}
+.fa-user-circle {
+  margin: 20px 20px;
+}
